# look-project-analysis

./: README.md  build_venv.sh  pyproject.toml
figures/: Makefile  analyze-color-corrections.py  plot-156p.py  plot-191p.py  plot-2005qn173.py  plot-29p.py  plot-382p.py  plot-57p.py  plot-67p.py  plot-7p.py  plot-97p.py  plot-c2014un271.py  plot-c2020r4.py  plot-colors.py  plot-machholz2.py  plot-temporal-filter.py
process/: color-and-ostat.py  color-corrections.py  dumb-stack.py  file-summary.py  lco_util.py  phot-to-json.py  phot.py  stack.py  temporal-filter.py  validate-clusters.py
quick_look/: core.py
scripts/: logrotate.config  post-sync-hook.sh  reprocess-target.py  slack-notification.py
