[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-look"
description = "LCO Outbursting Objects Key (LOOK) Project prompt data processing tools"
keywords = [
	"astronomy",
	"astrophysics",
	"planetary",
	"asteroid",
	"comet",
	"space",
	"science",
]
readme = "README.md"
authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.8"
dependencies = [
	"numpy>=1.23",
	"scipy~=1.11",
	"astropy>=5.0",
	"astroquery>=0.4.6",
	"sbpy~=0.4",
	"sep~=1.2",
	"astroscrappy",
	"ccdproc~=2.3",
	"photutils~=1.5",
	"casjobs",
	"mastcasjobs",
	"calviacat~=1.3",
	"mskpy",
	"reproject~=0.8",
	"matplotlib~=3.0",
]
version = "0.4.0"

[tool.setuptools.packages.find]

[tool.setuptools]
zip-safe = false
script-files = [
	"process/color-and-ostat.py",
	"process/dumb-stack.py",
	"process/file-summary.py",
	"process/phot.py",
	"process/phot-to-json.py",
	"process/stack.py",
	"process/temporal-filter.py",
	"scripts/slack-notification.py",
	"scripts/post-sync-hook.sh",
]
